[tool.poetry]
name = "zbig"
version = "0.2.0"
description = "Big Zhu Python Utility Library"
authors = ["bigzhu <vermiliondun@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyTelegramBotAPI = "^4.16.1"
pytz = "^2024.1"
environs = "^11.0.0"
schedule = "^1.2.1"

[tool.poetry.group.dev.dependencies]
pyTelegramBotAPI = "^4.16.1"
pytz = "^2024.1"
pytest = "^8.0.2"
pytest-cov = "^4.1.0"
ruff = "^0.6.0"
mypy = "^1.11.0"
pre-commit = "^3.8.0"
types-pytz = "^2024.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
[tool.pyright]
venvPath = "."
venv = ".venv"
