[tool.poetry]
name = "zbig"
version = "0.2.1"
description = "Big Zhu Python Utility Library"
authors = ["bigzhu <vermiliondun@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyTelegramBotAPI = "^4.34.0"
pytz = "^2026.2"
environs = "^15.0.1"
schedule = "^1.2.2"

[tool.poetry.group.dev.dependencies]
pytest = "^9.1.1"
pytest-cov = "^7.1.0"
ruff = "^0.15.20"
mypy = "^2.1.0"
pre-commit = "^4.6.0"
types-pytz = "^2026.2.0.20260518"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
[tool.pyright]
venvPath = "."
venv = ".venv"
